@@ -78,6 +78,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|ConcurrentMergeScheduler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|IndexCommit
 import|;
 end_import
@@ -134,6 +148,22 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|IndexWriterConfig
+operator|.
+name|OpenMode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|LogMergePolicy
 import|;
 end_import
@@ -148,7 +178,7 @@ name|lucene
 operator|.
 name|index
 operator|.
-name|TieredMergePolicy
+name|MergePolicy
 import|;
 end_import
 
@@ -163,34 +193,6 @@ operator|.
 name|index
 operator|.
 name|MergeScheduler
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|ConcurrentMergeScheduler
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|MergePolicy
 import|;
 end_import
 
@@ -233,22 +235,6 @@ operator|.
 name|index
 operator|.
 name|NoMergeScheduler
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexWriterConfig
-operator|.
-name|OpenMode
 import|;
 end_import
 
@@ -768,9 +754,9 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|Codec
+name|iwConf
 operator|.
-name|setDefault
+name|setCodec
 argument_list|(
 name|clazz
 operator|.
